# RA

ex01/: Makefile  VecSum.c  gen_samples.sh  gnuplot_script  input_sizes.txt  main.c  submit
ex02/: Makefile  after.ppm  before.ppm  gen_samples.sh  gnuplot_script  main.c  submit
ex03/: CMakeLists.txt  cache.h  cacheLine.cpp  cacheLine.hpp  data.txt  main.cpp  plot.sh  submit  submit.sh
ex03/perfCtr/: Makefile  perfCtr  perfCtr.c
ex04/: Makefile  data.txt  draw_grid.c  gen_samples.sh  gnuplot_script  jacobi_avx.c  jacobi_sse.c  jacobi_vanilla.c  main.c  submit
ex05/: Makefile  data10000.txt  data5000.txt  data_ges.txt  data_komplett.txt  gen_samples.sh  gnuplot_script  jacobi_avx.c  jacobi_avx_blocked.c  main.c  submit
ex06/: Makefile  data_parameter.txt  data_performance.txt  gnuplot_script_parameter  gnuplot_script_performance  jacobi_avx.c  jacobi_avx_blocked.c  jacobi_avx_blocked_1d.c  main  main.c  parameter.sh  performance.sh  submit.pbs
